updated swagger.yaml and added endpoint for getting fill level over the device id
